# visuamitra

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  test_api.py
backend/: main.py  routes.py  visuamitra_script.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/: Axis.jsx  ChromosomeIdeogram.jsx  DecompositionPlot.jsx  GenomicLocationPicker.jsx  Legend.jsx  MetaData.jsx  MethylationPlot.jsx  SettingsPanel.jsx  VCFInputPanel.jsx  Viewer.jsx  VisuaMiTRaViewer.jsx  motifTooltip.jsx
frontend/src/components/viewer/: HeaderSection.jsx  NavigationControls.jsx  VisualizerCanvas.jsx
frontend/src/hooks/: StateLogic.js
frontend/src/utils/: colorUtils.js  gradientColors.js  parseTSV.js  parseTSVLine.js
src/visuamitra/: .gitignore  __init__.py  fullTSV_endpoint.txt  main.py  routes.py  vcf_service.py  visuamitra_script.py
src/visuamitra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/visuamitra/frontend/: package-lock.json  package.json
src/visuamitra/frontend/src/: App.css  App.js  index.css  index.js
src/visuamitra/frontend/src/components/: Axis.jsx  ChromosomeIdeogram.jsx  DecompositionPlot.jsx  DownloadManager.jsx  GenomicLocationPicker.jsx  LandingPage.jsx  Legend.jsx  MetaData.jsx  MethylationPlot.jsx  OverviewDashboard.jsx  SamplePicker.jsx  SettingsPanel.jsx  VCFInputPanel.jsx  Viewer.jsx  VisuaMiTRaViewer.jsx  motifTooltip.jsx
src/visuamitra/frontend/src/hooks/: StateLogic.js
src/visuamitra/static/: asset-manifest.json  index.html
(+16 files in other folders)
