[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visuamitra"
version = "0.1.0"
description = "A Tandem Repeats visualization tool for Decomposition of Motifs and Methylation across alleles."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "fastapi",
    "uvicorn",
    "pysam",
    "pandas",
    "python-multipart",
    "bitarray",
    "regex"
]

[project.scripts]
visuamitra = "visuamitra.main:run_server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# This ensures all your React build files are included in the pip wheel
visuamitra = ["static/**/*"]