[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visuamitra"
version = "0.3.0"
description = "A Tandem Repeats visualization tool for Decomposition of Motifs and Methylation across alleles."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "fastapi",
    "uvicorn",
    "pysam",
    "pandas",
    "python-multipart",
    "bitarray",
    "regex"
]

[project.scripts]
visuamitra = "visuamitra.main:run_server"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
visuamitra = ["frontend/build/**/*"]

[tool.setuptools.packages.find]
where = ["src"]